objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Alt_Generation__c</fullName>
        <label>Alt Generation</label>
        <picklist>
            <picklistValues>
                <fullName>PXP-XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDII</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Alternate_Name__c</fullName>
        <label>Alternate Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Platforms__c</fullName>
        <label>Available Platforms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BU_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BU Family</label>
        <referenceTo>Cadence_Platform__c</referenceTo>
        <relationshipLabel>Part Numbers</relationshipLabel>
        <relationshipName>Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Model__c</fullName>
        <label>Business Model</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLLA_Flag_PL__c</fullName>
        <description>Value of this picklist would be set from CPM interface.</description>
        <label>CLLA Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPM_ID_Numeric__c</fullName>
        <formula>VALUE(SUBSTITUTE(CPM_ID__c, &quot;M1&quot;, &quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPM ID (Numeric)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPM_ID__c</fullName>
        <externalId>true</externalId>
        <label>CPM ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Reasons__c</fullName>
        <label>Competitive Reasons</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Containing_Products__c</fullName>
        <label>Containing Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <label>Created By</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_On__c</fullName>
        <label>Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_PriceBook_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current_PriceBook_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Prod_End_Of_Sale__c</fullName>
        <formula>End_of_Sale__c</formula>
        <label>Current Prod End Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Prod_End_Support__c</fullName>
        <formula>End_Support_Date__c</formula>
        <label>Current Prod End Support</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Prod__c</fullName>
        <formula>Product_Number__c</formula>
        <label>Current Prod</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Datasheet_URL__c</fullName>
        <label>Data Sheet URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ECCN__c</fullName>
        <label>ECCN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOL_Status__c</fullName>
        <formula>&apos;EOL&apos;</formula>
        <label>EOL Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Releases__c</fullName>
        <label>Effective Releases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Support_Date__c</fullName>
        <label>End of Support Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Sale__c</fullName>
        <label>End of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Examples__c</fullName>
        <label>Examples</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Export_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Export_Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Features__c</fullName>
        <label>Features</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <label>GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Description__c</fullName>
        <label>General Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Generation__c</fullName>
        <label>Generation</label>
        <picklist>
            <picklistValues>
                <fullName>PXP-GXL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PXP-XL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDIII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDII</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsTensilicaTermLicenseProduct__c</fullName>
        <formula>IF(UPPER(RIGHT(Product_Number__c, 1)) = &quot;T&quot;, true , false)</formula>
        <label>IsTensilicaTermLicenseProduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Status__c</fullName>
        <label>Lifecycle_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Adopter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eng Next Gen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incubator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mainstream</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Long_Description_CPM_ID__c</fullName>
        <label>Long Description CPM ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Description_GUID__c</fullName>
        <label>Long Description GUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Person__c</fullName>
        <label>Marketing Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Discount__c</fullName>
        <label>Max Discount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Quantity__c</fullName>
        <label>Max Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Term__c</fullName>
        <label>Max Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Quantity__c</fullName>
        <label>Min Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Term__c</fullName>
        <label>Min Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Optional_Products__c</fullName>
        <label>Optional Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Package_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify if Product is a Promotion Product or not</description>
        <label>Package_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Product_Number__c</formula>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisites__c</fullName>
        <label>Prerequisites</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pricebook_Type__c</fullName>
        <label>Pricebook Type</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM-N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP Catalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prod_Desc__c</fullName>
        <formula>Name</formula>
        <label>Prod Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_Name__c</fullName>
        <formula>Product_Number__c</formula>
        <label>Prod Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Attribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>[CRM_ATTRIBUTE_KEY__c]</description>
        <label>Product Attribute</label>
        <referenceTo>Product_Attribute__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <formula>IF(ISBLANK(Type__c), &quot;Unavailable&quot;, 
IF(CONTAINS(&quot;GL:3PRTY:HW:IL:LIB:MAN:RE:RL:RT:SUB:SV:SW:SW-WIN:TA-SW:TC:TF:UC:UP&quot;,Type__c),&quot;Product - Sales&quot;, 
IF(CONTAINS(&quot;MA:MR:MS:MV:PM:TA-MA&quot;,Type__c),&quot;Product - Maint&quot;,  
IF(CONTAINS(&quot;AS:CO:CO-AS:CO-DFI:CO-EX:CO-PS:CO-TM:CO-TS:CS:PS:TA-CO&quot;,Type__c) ,&quot;Product - Service&quot;,  
IF(CONTAINS(&quot;TA-TR:TR:TR-AS:TRC:TRM:TRP:TRR:VID&quot;,Type__c), &quot;Product - Training&quot;, 
IF(CONTAINS(&quot;ASI:DI:EN:EX:IMS:MI:N/A:NA:RA:RO:TS-T:UNKNOWN&quot;,Type__c),&quot;Product - Unknown&quot;,
&quot;Nothing&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <externalId>true</externalId>
        <label>Product Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Pack_Notes__c</fullName>
        <label>Promotion Pack Notes</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quoting_Comment__c</fullName>
        <label>Quoting Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Region_Flag__c</fullName>
        <label>Region Flag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Product_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Royalty_Bearing_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Royalty_Bearing_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Enable_Serialized_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if stock information for this product is tracked at the serial number level. If this flag is checked, serial number information will be captured in all ServiceMax inventory transactions.</description>
        <inlineHelpText>Flag indicates if stock information for this product is tracked at the serial number level. If this flag is checked, serial number information will be captured in all ServiceMax inventory transactions.</inlineHelpText>
        <label>Enable Serialized Tracking of Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Inherit_Parent_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if installed products of this product inherit the parent&apos;s warranty automatically. If not, this product should be linked to a warranty template.</description>
        <inlineHelpText>Indicates if installed products of this product inherit the parent&apos;s warranty automatically. If not, this product should be linked to a warranty template.</inlineHelpText>
        <label>Inherit Parent Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Cost__c</fullName>
        <description>Product cost in the default currency for your organization. Used for computing inventory value in ServiceMax.</description>
        <inlineHelpText>Product cost in the default currency for your organization. Used for computing inventory value in ServiceMax.</inlineHelpText>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Line__c</fullName>
        <description>Product Line is another way to classify your products (similar to product family). Typically Product Line applies to a broader group and product family to a specific set of products within a product line.</description>
        <inlineHelpText>Product Line is another way to classify your products (similar to product family).</inlineHelpText>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Accessory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Replacement_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if there are any replacement products defined for this product. Set automatically by Manage Replacements feature</description>
        <inlineHelpText>Flag indicates if there are any replacement products defined for this product. Set automatically by Manage Replacements feature</inlineHelpText>
        <label>Replacement Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Stockable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if this product is stockable. ServiceMax does not maintain inventory of non-stockable products.</description>
        <inlineHelpText>Flag indicates if this product is stockable. ServiceMax does not maintain inventory of non-stockable products.</inlineHelpText>
        <label>Stockable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Tracking__c</fullName>
        <description>If and how this product is tracked when sold to customers. Serialized products are tracked by unique serial numbers. Lot/Batch tracked items are identified by the batch or lot numbers. Non-tracked items do not have a lot or serial number.</description>
        <inlineHelpText>If and how this product is tracked when sold to customers. Serialized products are tracked by unique serial numbers. Lot/Batch tracked items are identified by the batch or lot numbers. Non-tracked items do not have a lot or serial number.</inlineHelpText>
        <label>Tracking</label>
        <picklist>
            <picklistValues>
                <fullName>Serialized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lot/Batch Tracked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Tracked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SVMXC__Unit_Of_Measure__c</fullName>
        <description>Unit of measure for this product</description>
        <inlineHelpText>Unit of measure for this product</inlineHelpText>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dozen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Group_Upload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Group Upload</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Team_A_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Team A Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Conditions__c</fullName>
        <label>Special Conditions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ACTIVE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INACTIVE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Temp_Key_Flag__c</fullName>
        <label>Temp Key Flag</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Third_Party_Arrangement_Details__c</fullName>
        <label>Third_Party_Arrangement_Details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party_Contract_Type__c</fullName>
        <label>Third_Party_Contract_Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Party_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transition_End_Date__c</fullName>
        <label>Transition End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Description__c</fullName>
        <label>Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>IP_products</fullName>
        <columns>Product_Number__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>End_of_Sale__c</columns>
        <columns>Product_Attribute__c</columns>
        <columns>Marketing_Person__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_Number__c</field>
            <operation>startsWith</operation>
            <value>IP</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>notEqual</operation>
            <value>Maintenance</value>
        </filters>
        <label>IP products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Products</fullName>
        <columns>CPM_ID__c</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Type__c</columns>
        <columns>Royalty_Bearing_Flag__c</columns>
        <columns>Third_Party_Arrangement_Details__c</columns>
        <columns>Third_Party_Contract_Type__c</columns>
        <columns>Third_Party_Flag__c</columns>
        <columns>Current_PriceBook_Flag__c</columns>
        <columns>ECCN__c</columns>
        <columns>End_of_Sale__c</columns>
        <columns>End_Support_Date__c</columns>
        <columns>Export_Restricted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Export_Restricted__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Products</label>
    </listViews>
</CustomObject>